# atom

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: error.rs  lib.rs  main.rs  prelude.rs  route.rs  state.rs
api/src/routes/: habit.rs
domain/: Cargo.toml
domain/src/: crud.rs  error.rs  lib.rs
domain/src/services/: habit.rs
infrastructure/: Cargo.toml
infrastructure/src/: database.rs  error.rs  lib.rs
infrastructure/src/database/: error.rs  mod.rs
infrastructure/src/models/: habit.rs  mod.rs  response.rs
