[workspace]
resolver = "2"
members = ["api", "infrastructure"]
readme = "README.md"

[workspace.dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
tracing-subscriber = { version = "0.3.19" }

[workspace.package]
name = "atom"
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
description = "Atom is a habit tracking application"
