[workspace]
resolver = "2"
members = ["api", "domain", "infrastructure"]

[workspace.dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
tracing-subscriber = { version = "0.3.19" }
tracing = { version = "0.1.41" }
thiserror = { version = "2" }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
description = "Atom is a habit tracking application"
readme = "README.md"
