[package]
name = "atom_domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

atom_infrastructure = { path = "../infrastructure" }
reqwest = "0.11.27"
