[package]
name = "atom_infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

dotenv = "0.15.0"
postgrest = "1.0"
